--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -28,3 +28,14 @@ redis.max-idle=10
 redis.min-idle=10
 redis.max-wait=10000
 
+#mail
+spring.mail.host=smtp.163.com
+spring.mail.username=15705817983@163.com
+# ???
+spring.mail.password=KWGGLRMVIQZWSVYZ
+spring.mail.port=25
+spring.mail.properties.mail.smtp.auth=true 
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.stattls.required=true
+
+
